[package]
name = "gis_puller"
version = "0.1.0"
authors = ["foobar"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# camino = "1.0.4" in future if we want to enforce UTF-8 paths
config = "0.11.0"
once_cell = "1.7.2"
quick-error = "2.0.1"
regex = "1.5.4"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
state = "0.4.2"
validator = { version = "0.13.0", features = ["derive", "unic"] }

[features]
full = []
nightly = []

[dev-dependencies]
tokio = { version = "1.5.0", features = ["full"] }
rstest = "0.10.0"
rstest_reuse = "0.1.3"
httpmock = "0.5.8"
# loom = "0.5.0" in future for concurrency testing
doc-comment = "0.3.3"
proptest = "1.0.0"
proptest-derive = "0.3.0"
