[badges]
maintenance = { status = "actively-developed" }

[package]
name = "gis_puller"
version = "0.1.1"
authors = ["pinkforest"]
description = "Geographic Information System (GIS) datasets acquisition library."
homepage = "https://github.com/pinkforest/gis_puller"
keywords = ["gis", "acquisition", "catalog"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/pinkforest/gis_puller"
categories = ["science"]
edition = "2018"
# Minimum Supported Rust Version (MSRV)
# RFC 2495 https://github.com/rust-lang/rfcs/blob/master/text/2495-min-rust-version.md
# @TODO 1.46 units funky settings - 1.46 MSRV from deps.
rust = "1.47"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# camino = "1.0.4" in future if we want to enforce UTF-8 paths
config = "0.11.0"
once_cell = "1.9.0"
quick-error = "2.0.1"
regex = "1.5.4"
reqwest = { version = "0.11.7", features = ["json"] }
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
state = "0.5.2"
validator = { version = "0.14.0", features = ["derive", "unic"] }

[features]
full = []
nightly = []

[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }
rstest = "0.15.0"
rstest_reuse = "0.1.3"
httpmock = "0.6.4"
# loom = "0.5.0" in future for concurrency testing
doc-comment = "0.3.3"
proptest = "1.0.0"
proptest-derive = "0.3.0"
